--- a/sections/b.main/6.conclution.tex
+++ b/sections/b.main/6.conclution.tex
@@ -1,8 +1,7 @@
 
-We have proposed refinement operators and an axiom weakening operator for all aspects of \SROIQ and shown that for repairs of inconsistent ontologies weakening can, in some cases, significantly outperform removal.
+This thesis has proposed refinement operators and an axiom weakening operator for all aspects of \SROIQ and shown that for repairs of inconsistent ontologies weakening can, in some cases, significantly outperform removal. The proposed approaches have been implemented both for performing empirical evaluation and in a Protégé plugin that allows users to use the algorithms described in this thesis, both for manually weakening axioms and for automatically repairing ontologies.
 
-Further additions to the refinement operators may be studied, e.g., using non-simple roles in the upward and downward covers in certain contexts. Relaxing the allowed weakening for RIAs may also be considered, and to cover also extensions to regularity conditions such as those studied in \cite{DBLP:conf/cade/Kazakov10}. We have also seen that the repair algorithm likely needs better heuristics to steer the selection of bad and weakened axioms in order to result in better repairs. Future work could further focus on finding robust measures for comparing the quality of repairs.
+The termination of the proposed repair algorithm should be studied as has been done in \cite{confalonieri2020towards}. Further additions to the refinement operators may be studied in more detail, e.g., using non-simple roles in the upward and downward covers in certain contexts. Relaxing the allowed weakening for RIAs may also be considered, and to cover also extensions to regularity conditions such as those studied in \cite{DBLP:conf/cade/Kazakov10}. It can also be seen that the repair algorithm likely needs better heuristics to steer the selection of bad and weakened axioms in order to result in better repairs. Future work could further focus on finding robust measures for comparing the quality of repairs.
 
-% TODO mention termination?
 % TODO
 
