--- a/sections/b.main/2.background/5.weakening.tex
+++ b/sections/b.main/2.background/5.weakening.tex
@@ -92,7 +92,7 @@ The axioms in the set $g_\Omc(\alpha)$ are indeed weaker than $\alpha$ for every
 
 In order to apply the weakening operator to the problem of repairing inconsistent ontologies, we follow the algorithm depicted in \cref{algo:repair-weaken-alc}. First, as mention above, the computation of a non-trivial upward and downward cover set is only possible when using a consistent ontology. We therefore need to first find a consistent subontology $\Omcref$ of $\Omc$ to serve as \emph{reference ontology}. One possibility outlined in \cite{troquard2018repairing} is to select a random maximal consistent subset of $\Omc$. Another option is to choose the intersection of some or all maximal consistent subsets of $\mathcal{O}$ (e.g., \cite{LLRRS10}). This latter option has the advantage of using only information for the weakening that is likely to be correct. On the other hand, it will lead to diminished upward and downward covers and therefore can reduce the number of possible weakening.
 
-Once a reference ontology has been chosen, and as long as $\Omc$ is inconsistent, we continue by selecting a ``bad'' axiom $\alpha$, remove it from $\Omc$, and replace it with a weaker axiom from $g_\Omcref(\alpha)$. Like for the choice of reference ontology, there are also multiple options for the selection of bad axioms. \cite{troquard2018repairing} proposes two different implementations. One based on choosing axioms at random, and another implementation that randomly samples a number of (or all the) minimal inconsistent subsets of axioms $J_1, J_2, \dots, J_k \subseteq \Omc$ and return one axiom in $\Omc$ from the ones occurring the most often. The weaker axiom is chosen form the set of weakening by selecting one uniformly at random. While there may be better heuristics for choosing the weakening, termination of the algorithm is not generally guaranteed. It has, however, been shown in \cite{confalonieri2020towards}, that when selecting among the weakening at random using a uniform distribution, the algorithm is almost surely going to terminate. A similar effect of almost sure termination could also be achieved by maintaining a constant (small but positive) probability of removing the axiom at each step.
+Once a reference ontology has been chosen, and as long as $\Omc$ is inconsistent, we continue by selecting a ``bad'' axiom $\alpha$, remove it from $\Omc$, and replace it with a weaker axiom from $g_\Omcref(\alpha)$. Like for the choice of reference ontology, there are also multiple options for the selection of bad axioms. \cite{troquard2018repairing} proposes two different implementations. One based on choosing axioms at random, and another implementation that randomly samples a number of (or all the) minimal inconsistent subsets of axioms $J_1, J_2, \dots, J_k \subseteq \Omc$ and return one axiom in $\Omc$ from the ones occurring the most often. The weaker axiom is chosen form the set of weakening by selecting one uniformly at random. While there may be better heuristics for choosing the weakening, termination of the algorithm is not generally guaranteed. It has, however, been shown in \cite{confalonieri2020towards}, that when selecting among the weakening at random using a uniform distribution, their algorithm is almost surely going to terminate. It has yet to be shown whether this holds also for the variation presented here. A similar effect of almost sure termination could also be achieved by maintaining a constant (small but positive) probability of removing the axiom at each step.
 
 \begin{algorithm}[ht]
   \begin{algorithmic}
