--- a/sections/b.main/3.theory/3.weakening.tex
+++ b/sections/b.main/3.theory/3.weakening.tex
@@ -174,6 +174,6 @@ Like for the invariant on simple roles, also regularity is maintained by repeate
 \end{theorem}
 
 \begin{proof}(\emph{Sketch})
-  We have established already in \cref{lem:regularity}, that the regularity of the RBox will be preserved.
+  It has been established already in \cref{lem:regularity}, that the regularity of the RBox will be preserved.
   It is guaranteed by \cref{lem:simple-roles} that all roles that were simple before addition, are still simple afterwards. Therefore, all usages of roles in axioms and concepts that were not touched by the refinement do not pose a problem. The condition static that the upward and downward cover of a role contain only roles that are simple in $\Omcfull$ (and therefore by \cref{lem:simple-roles} also in $\Omcfull \cup \{ \alpha' \}$) forces that every refinement of a role is simple. This restriction to simple roles guarantees that no non-simple role may be used in disjoint role axioms, or the scope of cardinality and self constraints.
 \end{proof}
