Added some extra details to the discussion about weakening SROIQ

--- a/sections/b.main/3.theory/1.expressivity.tex
+++ b/sections/b.main/3.theory/1.expressivity.tex
@@ -20,5 +20,7 @@ Firstly, the covers and refinement operators for roles are defined to operate on
 
 For this reason, we give to the upward and downward cover as an argument not only the reference ontology $\Omcref$, but also the full ontology $\Omcfull$. The same must be done for the axiom weakening operator that uses the cover functions. Both $\Omcref$ and $\Omcfull$ share the same vocabulary $N_I$, $N_C$, and $N_R$. We assume that all roles that are simple in $\Omcfull$ are also simple in $\Omcref$. While this is not strictly required, it will be true for all algorithms shown in this thesis that $\Omcref \subseteq \Omcfull$. In the context of repairing ontologies, $\Omcfull$ can be chosen to be the unmodified ontology that we want to repair.
 
-% TODO
-% TODO Mention alternative that uses non-simple roles in some contexts
+An alternative to always choosing simple roles is to define two versions of the covers, one which operators only over simple roles and one which uses also non-simple roles. Then in a context in which simple roles are required, the more restrictive cover is used, while in all other cases the complete covers are used. While this variation has been implemented, it has not been evaluated and will not be further considered in the rest of the thesis.
+
+Another assumption made in \cite{confalonieri2020towards} is that the existential and universal roles are simple, and may therefore be included in the upward and downward covers. While this is not a significant restriction in theory, it contradicts the OWL 2 DL specification, which directly defines these roles to be non-simple in every ontology. Including the existential and universal role in the covers, while augmenting the number of possible weakening, is not necessarily required. Therefore, this thesis will consider, as stated in \cref{sroiq-syntax}, the universal role to be non-simple. This allows the implementation of the proposed approach using existing highly-optimized reasoners designed for OWL 2 DL. It has to be considered, however, that removing the existential and universal role from the covers can prevent weakening of RIAs, disjoint role axioms and role assertions to tautologies. Removal of axioms may be required if they are by themselves inconsistent, meaning that not being able to weaken them to tautologies could mean the repair algorithm never terminates. For this reason, the weakening operator for these axioms explicitly includes a tautological axiom. Note that for the case of positive and negative role assertions, the extension of the covers to include also non-simple roles would be an alternative solution. This is however not the case for disjoint role assertions, as the roles used in them must always be simple.
+
