More introduction and conclusion

--- a/sections/a.front/acknowledgments.tex
+++ b/sections/a.front/acknowledgments.tex
@@ -1,3 +1,11 @@
 
-% TODO
+\blackout{
+I would like to express my gratitude to my supervisors, Oliver Kutz and Nicolas Troquard, for their invaluable guidance, support, and encouragement throughout the duration of this bachelor thesis. It was through their expertise and guidance that I was able to embark on this research journey. Their insightful suggestions and constructive feedback have been instrumental in shaping the direction of this work. I am particularly grateful for their proposal of the topic and their assistance in producing a paper, which provided me with invaluable exposure to the research community.
+
+I would also like to extend my appreciation to my fellow students, for their friendship, discussions, and shared experiences. Their motivation and willingness to exchange ideas have greatly enriched my academic experience and contributed to the development of this thesis.
+
+Furthermore, I would like to thank my parents and family for their support, belief in my abilities, and constant encouragement throughout my studies. I am deeply grateful for their understanding and patience.
+
+Finally, I would like to acknowledge the contributions of all the individuals whose work has been utilized in this thesis. Their research, publications, and work in their respective fields have provided the foundation upon which this thesis is built. I am grateful for their commitment to advancing knowledge and their contributions to the community.
+}
 
