--- a/sections/b.main/1.introduction.tex
+++ b/sections/b.main/1.introduction.tex
@@ -1,2 +1,20 @@
 
-% TODO
+The field of ontologies plays a crucial role in knowledge representation and has gained significant attention in recent years in many domains, and especially in biology and medicine. The introduction of the Web Ontology Language as a World Wide Web Consortium (W3C) recommendation has further grown the ecosystem and enabled use cases for ontology engineering in the context of the semantic web.
+
+Ontologies provide a structured and formalized way to represent knowledge about particular domains and facilitate automated reasoning and knowledge sharing. However, the development and maintenance of ontologies are not without challenges. With the growing size and complexity of these ontologies, ontologies become more susceptible to bugs, and it becomes harder to debug these defects. Moreover, in the context of the semantic web, automatic approaches to debugging ontologies are required for the combination of conflicting knowledge derived from independent sources.
+
+The \SROIQ Description Logic is a very expressive variant of the Description Logics family, which can serve as a logical foundation for representing knowledge in ontologies. It is also the bases for the Web Ontology Language, a standardized language for representing ontologies on the web enabling the creation of machine-readable ontologies. In both of these formalisms ontologies are sets of axioms, and each axiom is a statement encoding some knowledge about the domain. \SROIQ extends the basic description logics like \ALC with additional features such as complex role hierarchies, role disjointness axioms, and transitive roles. This expressive power allows for modelling complex domains with rich relationships and constraints. The expressivity, however, comes at the cost of requiring some global restrictions that must be followed in order to ensure the decidability of the logic.
+
+Many approaches to repairing inconsistent ontologies amount to identifying problematic axioms and then removing them (e.g., ~\cite{schlobach2003non,kalyanpur2005debugging,kalyanpur2006repairing,BaPS07}). Whilst this approach is obviously sufficient to guarantee that the obtained ontology is consistent, it tends to lead to information loss as a secondary effect, as outlined in detail in related works \cite{troquard2018repairing,confalonieri2020towards}. 
+Axiom weakening has been proposed as a solution for fine-grained repair to inconsistent ontologies. In these approaches, the information loss is reduced by weakening the inferential power of an axiom rather than by deleting it completely \cite{du2014practical,AMAI-2018,baader2018making,troquard2018repairing,confalonieri2020towards}. 
+%
+In \cite{troquard2018repairing}, axiom weakening using refinement operators has been described for \ALC and experimentally evaluated, showing that axiom weakening is able to retain more information than deletion. In \cite{confalonieri2020towards}, the axiom weakening has been extended to include many aspects of \SROIQ, notably omitting, however, the weakening of RBox axioms.
+
+This thesis aims to explore this topic of ontology repair, specifically focusing on axiom weakening in the context of the \SROIQ Description Logic and the Web Ontology Language. It extends upon the previous work on axiom weakening in description logics by extending the underlying basic principles to the logic \SROIQ, including also the possibility of weakening role inclusion axioms and disjoint role axioms. The thesis examines the challenges and difficulties that arise when applying axiom weakening to these more expressive description logics, and covers a number of scenarios where weakening can impact regularity of \SROIQ RBoxes. Further, a framework where these problems can be avoided is proposed.
+
+The implementation of the proposes algorithms will be discussed. Next to a prototype implementation and library used primarily for running the presented experiments, a plugin for the popular ontology editor, Protégé, has been realized. The thesis presents some details of the implementation process and discusses the integration of axiom weakening functionalities into the Protégé tool.
+
+Additionally, by implementing the proposed refinement and weakening operators it becomes possible to perform experimental evaluation, also on ontologies using the more expressive features of \SROIQ. The quality of repairs achieved through axiom weakening is assessed, and the results reaffirm the findings of \cite{troquard2018repairing} for the case of \SROIQ, namely that weakening may significantly outperform deletion. Additionally, the thesis explores the impact of caching in cover computations and evaluates the performance in terms of reasoner calls and execution time.
+
+Finally, the thesis concludes with a summary of the findings, their implications, and possible directions for future research. By addressing some of the challenges related to axiom weakening in the \SROIQ Description Logic, this research aims to contribute to the field of ontology engineering and inspire further research into axiom weakening and ontology repair.
+
