--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 \usepackage[english]{babel}
 \usepackage[T1]{fontenc}
 \usepackage{libertinus}
+\usepackage{censor}
 \usepackage{biblatex}
 
 \makeatletter
