--- a/sections/b.main/4.implementation.tex
+++ b/sections/b.main/4.implementation.tex
@@ -5,6 +5,6 @@ The refinement operators and axiom weakening operator have previously been imple
 
 \input{sections/b.main/4.implementation/1.prototype.tex}
 
-\section{Axiom Weakening in Protégé}\label{protege}
+\section{Axiom Weakening for Protégé}\label{protege}
 
 \input{sections/b.main/4.implementation/2.protege.tex}
